增加文章列表

--- a/example/_layout/post.html
+++ b/example/_layout/post.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>hello-world</title>
+    <title>{{ post.title }}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-    <h1>hello, world</h1>
-<p>这是我写下的第一篇文章</p>
-
+    {{ post.content }}
 </body>
 </html>
